# gitlab-cli

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  main.rs
src/commands/: file.rs  mod.rs  projects.rs  topics.rs  user.rs
src/gitlab/: client.rs  files.rs  mod.rs  projects.rs  users.rs
src/models/: project.rs  user.rs
src/utils/: config.rs  csv.rs  mod.rs
tests/: config_utils_tests.rs  csv_util_tests.rs  gitlab_client_tests.rs  integration_tests.rs  mock_gitlab_server.rs  user_model_tests.rs
