[package]
name = "gitlab-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for bulk management of GitLab users and files across multiple repositories"
authors = ["Your Name igor.ilic@heidelbergmaterials.com>"]

[dependencies]

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI argument parsing
clap = { version = "4.5", features = ["env", "derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2.1"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
csv = "1.3"
calamine = "0.26" # For Excel files

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Config management
config = "0.15"
dirs = "6.0"
toml = "0.8"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bars for long-running operations
indicatif = "0.17"

# Colored output
colored = "3.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.19"
warp = "0.3"
mockito = "1.7"

[lib]
name = "gitlab_cli"
path = "src/lib.rs"

[[bin]]
name = "gitlab-cli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
